package dk.sdu.mmmi.cbse.common.bullet;

import dk.sdu.mmmi.cbse.common.data.Entity;

/**
 *
 * @author corfixen
 */
public class Bullet extends Entity {
    public Entity shooter;
    public Bullet(Entity entity){
        shooter = entity;
    }



}
